--- a/Afonsoft.ADONET/Afonsoft.ADONET.csproj
+++ b/Afonsoft.ADONET/Afonsoft.ADONET.csproj
@@ -14,7 +14,7 @@
     <AssemblyVersion>2019.8.5</AssemblyVersion>
     <FileVersion>2019.8.5</FileVersion>
     <Version>2019.8.5</Version>
-    <RepositoryUrl>https://github.com/afonsoft/Afonsoft.EFCore</RepositoryUrl>
+    <RepositoryUrl>https://github.com/afonsoft/Afonsoft.ADONET</RepositoryUrl>
     <PackageLicenseUrl></PackageLicenseUrl>
     <Description>ADO.NET for SQLite, MySQL, Oracle, SQLServer e PostgreSQL</Description>
     <LangVersion>default</LangVersion>
